--- a/src/24/wsgi.conf
+++ b/src/24/wsgi.conf
@@ -1,4 +1,4 @@
-WSGIScriptAlias / /opt/django/tutorial/tutorial/wsgi.py
+WSGIScriptAlias /django /opt/django/tutorial/tutorial/wsgi.py
 WSGIPythonHome /home/oi/jupyter
 WSGIPythonPath /opt/django/tutorial
 
