--- a/src/24/wsgi.conf
+++ b/src/24/wsgi.conf
@@ -1,5 +1,5 @@
 WSGIScriptAlias /django /opt/django/tutorial/tutorial/wsgi.py
-WSGIPythonHome /home/oi/jupyter
+WSGIPythonHome /home/oi/pythonista
 WSGIPythonPath /opt/django/tutorial
 
 <Directory /opt/django/tutorial/tutorial>
